Fixes issue with mobile menu item spacing

--- a/src/components/menu.module.scss
+++ b/src/components/menu.module.scss
@@ -15,6 +15,7 @@
     transition: all 350ms ease-in-out;
     margin-left: 0;
     width: 100%;
+    justify-content: flex-start;
   }
 
   .closed {
